# DjangoProject_hw

./: .gitignore  README.md  catalog.json  groups.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_remove_blog_publication_date_and_more.py  0003_remove_blog_publication_status_blog_is_published_and_more.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  forms.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_updated_at.py  0003_alter_product_options_product_is_published.py  0004_alter_product_options.py  0005_product_owner.py  0006_alter_product_options.py  0007_alter_product_owner.py  0008_alter_product_owner.py  0009_alter_product_owner.py  0010_alter_product_owner.py  0011_alter_product_owner.py  0012_alter_product_owner.py  0013_alter_product_options_alter_product_owner.py  0014_alter_product_options.py  0015_alter_product_options.py  0016_alter_product_options.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  footer.html  header.html  home.html  product_by_category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  (+2 more)
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_remove_customuser_username_and_more.py
(+4 files in other folders)
